--- a/.eslintrc
+++ b/.eslintrc
@@ -3,5 +3,8 @@
         "node": true,
         "jest": true
     },
+    "rules": {
+        "no-console": 0
+    },
     "extends": "airbnb-base"
 }
