Added AWS CodeBuild spec file.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A simple lambda that listens to an SNS topic, and writes messages to an S3 bucket.",
   "main": "src/index.js",
   "scripts": {
-    "build": "zip -r snslambda.zip src/ node_modules/ package*",
+    "zip": "zip -r snslambda.zip src/ node_modules/ package*",
     "lint": "eslint src/ test/",
     "test": "jest --coverage"
   },
